--- a/podstrony/1.html
+++ b/podstrony/1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
 	<title>O nas</title>
 	<meta charset="utf-8">
@@ -16,13 +16,14 @@
 		</p>
 		<p>
 			Jesteśmy grupą projektową z klasy II Ti, o nazwie Kopytko A.<br> Nasza nazwa wywodzi się od uwielbianej przez nas potrawy jaką są kopytka.<br><br>
-			W skład naszej drużyny wchodzą:
-			<ul>
-				<li>Aleks "Chwast" Bońkowski</li>
-				<li>Kacper "Papcer" Łukaszewski</li>
-				<li>Wiktor "Witold" Krysiński</li>
-				<li>i Michał "Prezydent" Młynarczyk</li>
-			</ul>
+			W skład naszej drużyny wchodzą:<br>
+			Od lewej strony w pierwszym rzędzie:<br>
+				Aleks "Chwast" Bońkowski<br>
+				Kacper "Papcer" Łukaszewski<br>
+			a w drugim:<br>
+				Wiktor "Witold" Krysiński<br>
+				i Michał "Prezydent" Młynarczyk<br>
+			
 		</p>
 		<p>
 			<img src="../grafika/kopytko_a.png" alt="obrazek_z_ludźmi_kopytka"><br><br>
