--- a/podstrony/10.html
+++ b/podstrony/10.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
 	<title>Źródła</title>
 	<meta charset="utf-8">
@@ -14,7 +14,7 @@
 		<p >
 			<h2 class="title">Źródła</h2>
 		</p>
-		<p>
+		<p id="origin">
 			<!--Wikipedia rzondzi-->
 			<a href="https://pl.wikipedia.org" target="blank">Wikipedia</a><br>
 			<a href="https://www.smamarketing.net" target="blank">Sma marketing</a><br>
