--- a/podstrony/11.html
+++ b/podstrony/11.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
 	<title>Dodatkowa zawartość</title>
 	<meta charset="utf-8">
@@ -26,10 +26,21 @@
 			Miłego grania!
 		</p>
 		<div id="gry">
+
+
 			<a href="gry/snake.html"><div id="snejk">
 				<img src="../grafika/p11/1.png" class="og"><br>
-				Snake
+				Snejk<br>
+				<span id="og1">
+					W grze tej za pomocą strzałek<br>
+					sterujesz ziolonym wężem.<br>
+					Twoim zadaniem jest zbieranie<br>
+					czerwonych cosi aby go rozwijać.<br>
+					Niech okaże się kto wyhoduje<br>
+					największego węża!
+				</span>
 			</div></a>
+
 		</div>
 		<div class="menu">
 		<a href="10.html"><div class="button2">Poprzedni</div></a>
