--- a/podstrony/2.html
+++ b/podstrony/2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
 	<title>O projekcie</title>
 	<meta charset="utf-8">
@@ -23,7 +23,9 @@
 
 
 			Jest również dostępna wersja naszego projektu opublikowana w internetach,<br>
-			można przejść do niej po kliknięciu <a href="https://adriamahitsinoro.github.io/test/index.html" target="blank">tutaj</a>.
+			można przejść do niej po kliknięciu <a href="https://adriamahitsinoro.github.io/test/index.html" target="blank">tutaj</a>.<br><br>
+			Można też pobrać wersję w domunencie docx<br>
+			aby to zrobić wystarczy kliknąć <a href="../pliki/Projekt_Edukacyjny_IIti_Kopytko_A.docx" download>tutaj</a>.
 		</p>
 		<div class="menu">
 		<a href="1.html"><div class="button2">Poprzedni</div></a>
