--- a/podstrony/3.html
+++ b/podstrony/3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
 	<title>Czym są strony internetowe</title>
 	<meta charset="utf-8">
@@ -23,7 +23,7 @@
 			<img src="../grafika/p3/1.png" alt="obrazek_z_kodem_html" class="w2"><br>
 			który jest prezentowany za pomocą prze różnych przeglądarek internetowych,<br>
 			np: Opera, Firefox, Google Chrome, Safari, Brave czy Microsoft Edge.<br>
-			Do Pisania Stron Internetowych wykorzystujemy języki Html, CSS oraz JavaScript.<br>
+			Do Pisania Stron Internetowych wykorzystujemy języki HTML, CSS oraz JavaScript.<br>
 			Przeglądając strony internetowe możemy napotkać programy specjalne stworzone do przeglądarek tak zwane "Wtyczki".<br>
 			Każda takie oprogramowanie może być inne to wszystko zależy z jakiej przeglądarki korzystamy.<br><br>
 			Najpopularniejsze Wtyczki są to:<br>
