--- a/podstrony/5.html
+++ b/podstrony/5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
 	<title>Pierwsze strony internetowe</title>
 	<meta charset="utf-8">
@@ -29,7 +29,7 @@
 			Nie były to strony zapierające dech swoim wyglądem gdyż jeszcze nie było CSS,<br>
 			a w samym HTML nie było zbyt wielu opcji dotyczących wyglądu,<br>
 			lecz nie można im odmówić tego że spełniały swoje zamierzone role.<br>
-			A dzięki stronie <a href="https://archive.org/web/">Internet Archive Wayback Machine </a> jesteśmy w stanie zobaczyć zapisy stron<br>
+			A dzięki stronie <a href="https://archive.org/web/" target="blank">Internet Archive Wayback Machine </a> jesteśmy w stanie zobaczyć zapisy stron<br>
 			z różnych okresów czasu.  
 		</p>
 		<p>
