--- a/podstrony/6.html
+++ b/podstrony/6.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
 	<title>Ewolucja stron internetowych na przestrzeni lat</title>
 	<meta charset="utf-8">
@@ -19,7 +19,7 @@
 			W celu ustaleniu standardów WWW we wrześniu 1994 roku Tim Berners-Lee założył W3C (World Wide Web Consortium).<br>
 			Jednak z biegiem czasu i chęciami do ulepszenia HTML zaczęto dodawać nowe elementy.<br>
 			Niestety początkowo nie były to zawsze elementy ogólnodostępne i używane przez wszystkie przeglądarki,<br>
-			<img src="../grafika/p6/2.png"><br>
+			<img src="../grafika/p6/1.jpg"><br>
 			tylko takie tworzone przez twórców przeglądarki na ich własne zachcianki bez porozumień z innymi.<br>
 			Z czasem im się przekonać twórców przeglądarek do rezygnacji z różnych indywidualnych znaczników,<br>
 			w celu ujednolicenia wyglądu stron internetowych we wszystkich przeglądarkach.<br>
@@ -27,7 +27,7 @@
 			Bardzo dużo w stronach internetowych dodał od siebie CSS, którego pierwszą rekomendację W3C wypuściło w 1996 roku,<br>
 			gdyż dodał on wiele możliwości do modyfikowania wyglądu strony.<br>
 			Doszła też również interaktywność wraz z JavaScriptem opracowywanym przez Netscape.<br>
-			<img src="../grafika/p6/3.png"><br>
+			<img src="../grafika/p6/2.jpg"><br>
 			Później dzięki PHP i mysql doszła możliwość zarządzania danymi przez strony internetowe.<br>
 			I tak zaczynając na pierwszej stronie, która składała się z tekstu i odnośników,<br>
 			wraz z rozwojem ludzi w dziedzinie stron internetowych jak i języków służących do ich komponowania<br>
@@ -35,7 +35,7 @@
 			Jednym z pierwszych popularnych trendów podczas tworzenia stron było stosowanie tabel jako struktury,<br>
 			gdyż było to łatwe do zastosowania i miało przyzwoity wygląd.<br>
 			Z czasem jednak tworzenie stron na tabelach oddało swoje miejsce bardziej interaktywnym divom,<br>
-			<img src="../grafika/p6/4.png"><br>
+			<img src="../grafika/p6/3.jpg"><br>
 			które łącząc z magią css-a można sformatować na wiele różnych sposobów.<br>
 			Jednym z powodów tej zmiany było zapotrzebowanie na strony bardziej przyjazne dla oka<br>
 			gdyż otwierało się coraz więcej biznesów online i internet zyskiwał coraz to więcej użytkowników, więc zmiany były wymagane.<br>
