--- a/podstrony/9.html
+++ b/podstrony/9.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
 	<title>Języki programowania używane do tworzenia stron</title>
 	<meta charset="utf-8">
@@ -15,7 +15,51 @@
 			<h2 class="title">Języki programowania używane do tworzenia stron</h2>
 		</p>
 		<p>
-			tak, jak najbardziej_9
+			<h2>HTML</h2>
+		<p>
+			<img src="../grafika/p9/1.png" class="w7"><br>
+			Język programowania oparty o znaczniki, stanowiący swoisty szkielet strony internetowej,<br>
+			który zapewnia oparcie pozostałym jej elementom.<br>
+			Pozwala on na nakreślenie podstawowego wyglądu i funkcji strony,<br>
+			a także osadzenie w dokumencie plików np. multimediów, czy też elementów baz danych.<br>
+			Za najważniejszych twórców języka HTML uznaje się Brytyjskiego fizyka i programistę Tima Bernersa-Lee<br>
+			oraz jego amerykańskiego kolegę po fachu Dana Connoly'ego.<br>
+			Pierwsze prototypy tego rewolucyjnego tworu powstały już w 1980 roku,<br>
+			na potrzeby Europejskiej Organizacji Badań Jądrowych – CERN.<br>
+			Język jest rozwijany od momentu powstania,<br>
+			a od 2000 roku stanowi międzynarodowy standard jeśli chodzi o budowę stron internetowych.
+		</p>
+		<h2>CSS</h2>
+		<p>
+			<img src="../grafika/p9/2.png" class="w7"><br>
+			Kaskadowe Arkusze Stylów są używane do określania formy strony internetowej.<br>
+			W przeciwieństwie do mocno ograniczonego na tym polu HTML'a,<br>
+			CSS przedstawia użytkownikom całą gamę różnych możliwości zmiany wyglądu strony.<br>
+			Stanowi on swego rodzaju listę reguł określających w jaki sposób<br>
+			poszczególne elementy mają być wyświetlane przez przeglądarkę.<br>
+			Pierwsze „szkice” CSS'a powstały w 1994 roku za sprawą Norweskiego informatyka Håkona Wium Lie.<br>
+			Pierwszy, kompletny projekt języka ujrzał światło dzienne w 1996.
+		</p>
+		<h2>PHP</h2>
+		<p>
+			<img src="../grafika/p9/3.png" class="w7"><br>
+			Skryptowy język programowania używany do tworzenia, jakże by inaczej, skryptów po stronie serwera WWW.<br>
+			Jako że wykonywany jest po stronie serwera, jest niewidoczny dla użytkowników.<br>
+			Użycie go pozwala między innymi na dynamiczne generowanie strony,<br>
+			tworzenie i modyfikowanie plików na serwerze, ograniczanie dostępu do danych czy szyfrowanie danych.<br>
+			Po raz pierwszy pojawił się w 1994 roku jako stworzony przez Rasmusa Lerdorfa zestaw skryptów Perla<br>
+			służący do monitorowania internautów odwiedzających jego witrynę i rozwijany jest do dzisiaj.
+ 		</p>
+ 		<h2>JavaScript</h2>
+ 		<p>
+ 			<img src="../grafika/p9/4.png" class="w7"><br>
+			W kontraście do PHP, który używany jest po stronie serwera,<br>
+			użycie JavaScripta jest widoczne bezpośrednio po stronie użytkownika.<br>
+			Skrypty w tym języku zarówno mogą służyć do wywoływania konkretnych efektów na stronie internetowej,<br>
+			jak na przykład tworzenie złożonych efektów wizualnych bądź sprawdzanie danych wprowadzanych w formularzach,<br>
+			jak i do tworzenia pełnoprawnych aplikacji czy też prostych gier.<br>
+			JS pojawił się na rynku w 1995 roku za sprawą Brendana Eicha, amerykańskiego hakera i programisty,<br>
+			jako rozwinięta implementacja języka ECMAScript.
 		</p>
 		<div class="menu">
 		<a href="8.html"><div class="button2">Poprzedni</div></a>
