--- a/podstrony/1.html
+++ b/podstrony/1.html
@@ -22,10 +22,7 @@
 				Kacper "Papcer" Łukaszewski<br>
 			a w drugim:<br>
 				Wiktor "Witold" Krysiński<br>
-				i Michał "Prezydent" Młynarczyk<br>
-			
-		</p>
-		<p>
+				i Michał "Prezydent" Młynarczyk<br><br>
 			<img src="../grafika/kopytko_a.png" alt="obrazek_z_ludźmi_kopytka"><br><br>
 			Jednak oprócz naszej miłości do kopytek, każdy z nas posiada różne zainteresowania w zakresie informatyki,<br>
 			od zamiłowania do podzespołów komputerowych przez tworzenie stron internetowych do pisania gier, programów czy innych skryptów.
