--- a/podstrony/10.html
+++ b/podstrony/10.html
@@ -15,7 +15,7 @@
 			<h2 class="title">Źródła</h2>
 		</p>
 		<p id="origin">
-			<!--Wikipedia rzondzi-->
+			<!--Wikipedia żądzi-->
 			<a href="https://pl.wikipedia.org" target="blank">Wikipedia</a><br>
 			<a href="https://www.smamarketing.net" target="blank">Sma marketing</a><br>
 			<a href="https://www.smashingmagazine.com" target="blank">Smashingmagazine</a><br>
@@ -32,7 +32,7 @@
 			<a href="https://css-tricks.com/" target="blank">CSS tricks</a><br>
 			<a href="https://sukcesstrony.pl" target="blank">Sukces strony</a><br>
 			<a href="https://mixedmedia.pl" target="blank">Mixed media</a><br>	
-			<a href="https://www.w3.org/People/Raggett/book4/ch01.html" target="blank">Rozdział pierwszy książki &nbsp; 'Raggett on HTML 4"</a><br>		
+			<a href="https://www.w3.org/People/Raggett/book4/ch01.html" target="blank">Rozdział pierwszy książki &nbsp; 'Raggett on HTML 4"</a><br>
 			<a href="https://www.w3.org/People/Raggett/book4/ch02.html" target="blank">Rozdział drugi książki &nbsp; 'Raggett on HTML 4"</a><br>	
 		</p>
 		<div class="menu">
