--- a/podstrony/11.html
+++ b/podstrony/11.html
@@ -21,26 +21,27 @@
 		</p>
 		<p>
 			Jednak jeśli takie napady nastąpiły to serdecznie przepraszamy<br>
-			i w ramach rekompensaty zapraszamy to pogrania w widoczne poniżej gry<br>
-			przygotowane z miłością przez naszego towarzysza Aleksa.<br>
+			i w ramach rekompensaty zapraszamy to pogrania w widoczną poniżej grę<br>
+			przygotowaną z miłością i poradnikami przez naszego towarzysza Aleksa.<br>
 			Miłego grania!
 		</p>
 		<div id="gry">
 
 
-			<a href="gry/snake.html"><div id="snejk">
-				<img src="../grafika/p11/1.png" class="og"><br>
-				Snejk<br>
-				<span id="og1">
+			<a href="gra/snake.html">
+				<div id="snejk">
+					<img src="../grafika/p11/1.png" class="og"><br>
+					Snejk<br>
+					<span id="og1">
 					W grze tej za pomocą strzałek<br>
 					sterujesz ziolonym wężem.<br>
 					Twoim zadaniem jest zbieranie<br>
 					czerwonych cosi aby go rozwijać.<br>
 					Niech okaże się kto wyhoduje<br>
 					największego węża!
-				</span>
-			</div></a>
-
+					</span>
+				</div>
+			</a>
 		</div>
 		<div class="menu">
 		<a href="10.html"><div class="button2">Poprzedni</div></a>
