--- a/podstrony/2.html
+++ b/podstrony/2.html
@@ -15,16 +15,25 @@
 			<h2 class="title">Parę słów o projekcie</h2>
 		</p>
 		<p>
+			Opiekun projektu:<br>
+			Pan Jan Matuszewski
+		</p>
+		<p>
+			Dlaczego taki temat?<br>
+			Długo zastanawialiśmy się nad tym co będzie dla nas odpowiednie<br>
+			jednak po paru naradach dotyczących wyboru tematu<br>
+			doszliśmy do wniosku, że chcielibyśmy wybrać coś związanego ze stronami internetowymi<br>
+			i tak po jakimś czasie spędzonym na zbieraniu pomysłów<br>
+			razem postanowiliśmy, że najciekawszym będzie opisanie<br>
+			krótkiej historii i zastosowań stron internetowych.
+		</p>
+		<p>
 			Nasze cele:<br>
-			- przedstawienie krótkiej historii stron internetowych<br>
+			- przedstawienie krótkiej historii i zastosowań stron internetowych<br>
 			- zaprezentowanie naszych umiejętności w tworzeniu stron internetowych<br>
 			- zaciekawienie widza<br>
 			- przedstawienie informacji w przystępny sposób<br><br>
-
-
-			Jest również dostępna wersja naszego projektu opublikowana w internetach,<br>
-			można przejść do niej po kliknięciu <a href="https://adriamahitsinoro.github.io/test/index.html" target="blank">tutaj</a>.<br><br>
-			Można też pobrać wersję w domunencie docx<br>
+			Można też pobrać wersję w dokumencie .docx<br>
 			aby to zrobić wystarczy kliknąć <a href="../pliki/Projekt_Edukacyjny_IIti_Kopytko_A.docx" download>tutaj</a>.
 		</p>
 		<div class="menu">
